<resources>
    <string name="app_name">Prototipo De Telas</string>
    <string name="title_activity_login">Entrar</string>
    <string name="opts">Opções</string>
    <string name="abt">Sobre</string>
    <string name="out">Sair</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (opcional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este endereço de e-mail é inválido</string>
    <string name="error_invalid_password">Esta senha está muito curta</string>
    <string name="error_incorrect_password">Esta senha está incorreta</string>
    <string name="error_field_required">Esse campo é necessário</string>
    <string name="permission_rationale">As permissões de contatos são necessárias para fornecer conclusões de email.</string>
    <string name="or">OU</string>
    <string name="fb_login">Login com Facebook</string>
    <string name="title_activity_tab">Tela de Abas</string>
    <string name="action_settings">Definições</string>
    <string name="section_format">Olá Mundo! a partir da sessão: %1$d</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_events_frag">Eventos</string>
    <string name="title_map_frag">Mapa</string>
    <string name="title_favorites_frag">Favoritos</string>
    <string name="title_activity_maps">Mapa</string>
    <!-- Eventos -->
    <string name="detalhes">+ DETALHES</string>
    <string name="confirmar">CONFIRMAR PRESENÇA</string>
    <!-- Favoritos -->
    <string name="eventosquevou">EVENTOS QUE EU VOU!</string>
    <string name="data_hora">20/11 - 16h</string>
    <string name="localizacao">Candeias</string>
    <string name="Reserv">Reservar</string>
    <string name="eventhr">Eventos aqui:</string>
    <string name="hint_enter_url">Insira a url aqui</string>
    <string name="textViewNewEventName">Nome</string>
    <string name="textViewNewEventAddress">Endereço</string>
    <string name="textViewNewEventDescription">Descrição</string>
    <string name="textViewNewEventDate">Data-Hora</string>
    <string name="textViewNewEventPrice">Preço</string>
    <string name="textViewNewEventTicketAmount">Qtd. Ingressos</string>
    <string name="textViewNewEventImage">Imagem</string>
    <string name="textViewNewEventScreenLabel">Dados do Evento:</string>
    <string name="title_new_event">Criar um novo Evento</string>
    <string name="HintNewEventDateHour" translatable="false">31/12-23h</string>
    <string name="ButtonSave">Salvar</string>
    <string name="ButtonCancel">Cancelar</string>
    <string name="appName" translatable="false">Terp Tickets</string>
    <string name="textViewSignUp" translatable="false">Sign Up</string>
    <string name="textSampleAuthent">Autenticando...</string>
    <string name="textSampleFillFields">Preencha os campos corretamente!</string>
    <string name="textSampleSucess">Sucesso!</string>
</resources>
